# openai-compatible-tester-cli

./: .gitignore  Cargo.toml  PRD.md  README.md
examples/: github-action.yaml  local.yaml  provider.yaml
fixtures/: tiny.jsonl
fixtures/schemas/: person.schema.json
src/: cli.rs  config.rs  main.rs  mock.rs  types.rs
src/client/: mod.rs
src/report/: mod.rs
src/testsuite/: mod.rs  registry.rs  runner.rs  score.rs
src/util/: fs.rs  json.rs  mod.rs  redact.rs
tests/: cli_init.rs
