[package]
name = "openai-compatible-tester-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI to test OpenAI-compatible API compatibility"
license = "MIT OR Apache-2.0"

[[bin]]
name = "octest"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
console = "0.15"
futures-util = "0.3"
jsonschema = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
